--- a/text/projekt-20-literatura-bibliography.bib
+++ b/text/projekt-20-literatura-bibliography.bib
@@ -125,7 +125,7 @@ address = {Natick, Massachusetts}
   journal = {The Astrophysical Journal},
 }
 
-    @MISC{list-of-process-modelling-lang,
+@MISC{list-of-process-modelling-lang,
         author = {Pawlewski, Pawel},
         year = {2014},
         month = {12},
@@ -135,4 +135,24 @@ address = {Natick, Massachusetts}
         journal = {Procedia CIRP},
         doi = {10.1016/j.procir.2014.01.130},
         url = "https://www.researchgate.net/publication/270980703_Multimodal_Approach_to_Modeling_of_Manufacturing_Processes"
-    }
+}
+
+@article{jones2004traffic,
+  title={Traffic simulation software comparison study},
+  author={Jones, Steven L and Sullivan, Andrew J and Cheekoti, Naveen and Anderson, Michael D and Malave, D},
+  journal={UTCA report},
+  volume={2217},
+  year={2004},
+  url={http://utca.eng.ua.edu/files/2011/08/02217fnl.pdf}
+}
+
+@book{hairer,
+    author = {Hairer, Ernst and Wanner, G},
+    year = {1996},
+    month = {01},
+    pages = {},
+    title = {Solving Ordinary Differential Equations II. Stiff and Differential-Algebraic Problems},
+    volume = {14},
+    journal = {Springer Verlag Series in Comput. Math.},
+    doi = {10.1007/978-3-662-09947-6}
+}
